# datacraft-faker

./: README.md  setup.cfg
datacraft_faker/: __init__.py
tests/: test_faker.py
