[metadata]
name = datacraft-faker
version = 0.1.0
description = Custom faker type extensions for datacraft package
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbux-dev/datacraft-faker
author = Brian Buxton
author_email = bbux-dev@gmail.com
license = MIT

[options]
packages = find:

install_requires =
    datacraft>=0.7.1
    faker

[options.packages.find]
exclude = tests, docs

[options.entry_points]
datacraft.custom_type_loader =
    faker = datacraft_faker:load_custom

[options.package_data]
datacraft_faker =
    py.typed

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
    faker-vehicle
all =
    %(test)s
